31439 Dropdown menu appears behind Data Components - Fixed dropdown menu z-index to stay on top

--- a/packages/dina-ui/components/button-bar/nav/nav.css
+++ b/packages/dina-ui/components/button-bar/nav/nav.css
@@ -6,14 +6,7 @@ body {
 }
 .dropdown:hover .dropdown-menu {
   margin-top: -5px;
-}
-
-.submenu > .dropend .dropdown-menu[data-bs-popper] {
-  top: 0;
-  right: auto;
-  left: 100%;
-  margin-top: 0;
-  margin-left: 0;
+  z-index: 9000;
 }
 
 .submenu > button {
